--- a/default.twig
+++ b/default.twig
@@ -85,6 +85,10 @@
             width: 1em;
         }
 
+        .menu-section-item-dietary-props {
+            margin-top: 1em;
+        }
+
         .menu-section-item-dietary-props .dietary-icon {
             margin-right: 0.5em;
         }
