--- a/stylesheet.less
+++ b/stylesheet.less
@@ -2,6 +2,7 @@
 
 body {
   background-color: @color-swatch1;
+  background-image:image('/images/ricepaper2.png');
   margin: 0;
   padding: 0;
   font-family:@font-swatch5-font-family;
@@ -44,6 +45,7 @@ h1 {
   line-height:@font-swatch1-line-height;
   letter-spacing: @font-swatch1-letter-spacing;
   font-size: @font-swatch1-font-size;
+  text-transform: uppercase;
 }
 
 h2
@@ -54,6 +56,7 @@ h2
   line-height:@font-swatch2-line-height;
   color: @font-swatch2-color;
   letter-spacing: @font-swatch2-letter-spacing;
+  text-transform: uppercase;
 }
 
 h3
@@ -260,51 +263,279 @@ footer .widget.profile .twitter span {
    =============================== */
 
 header {
-  padding: 0;
-  background-color: @color-swatch7;
+  padding-top: 42px;
 }
+
 
 .companyheader {
   display: block;
-  float: left;
-  padding: 11px 0px 7px
 }
 
-.companyname a {
-  text-decoration: none;
-  font-family:@font-swatch10-font-family;
-  font-weight: @font-swatch10-font-weight;
-  color:@font-swatch10-color;
-  line-height:@font-swatch10-line-height;
-  letter-spacing: @font-swatch10-letter-spacing;
-  font-size: @font-swatch10-font-size;
+/* COMPANY NAME */
+
+.widget.companyname {
+  width: 100%;
+  text-align: center;
 }
 
 .companyname a:hover {
   text-decoration: none;
 }
 
-/* COMPANY NAME */
-
-.widget.companyname {
-  display: block;
-  float: left;
-  margin-top: 10px;
-}
-
-.widget.companyname h1 {
-  margin: 0;
-  padding: 0;
-  letter-spacing: -1px;
+.widget.companyname a {
+  font-family:@font-swatch10-font-family;
+  font-weight: @font-swatch10-font-weight;
+  color:@font-swatch10-color;
+  line-height:@font-swatch10-line-height;
+  letter-spacing: @font-swatch10-letter-spacing;
+  font-size: @font-swatch10-font-size;
+  text-transform: uppercase;
+  padding: 10px 8px 8px;
 }
 
 /* LOGO */
 
 .widget.logo {
-  display: block;
-  float: left;
-  margin-right: 10px;
+  width: 100%;
+  text-align: center;
 }
+
+
+/* ===============================
+   MENU
+   =============================== */
+
+
+.menu-items, .menu-section-items {
+       -moz-column-count: 3;
+       -moz-column-gap: 50px;
+       -webkit-column-count: 3;
+       -webkit-column-gap : 50px;
+}
+
+.menu-availability {
+  color: @color-swatch3;
+  font-family:@font-swatch5-font-family;
+  font-size:@font-swatch5-font-size;
+  font-weight: @font-swatch5-font-weight;
+  line-height:@font-swatch5-line-height;
+  letter-spacing: @font-swatch5-letter-spacing;
+}
+
+
+.menu-item,
+.menu-section-item {
+    margin-bottom: 2.5em;
+    padding-bottom: 2.5em;
+    position: relative;
+    display: inline-block;
+    border-bottom: 1px dotted @color-swatch5;
+}
+
+
+
+.menu-item-description, .menu-section-item-description, .standard-price, .menu-item-nutritional-title, .menu-item-nutritional-props, .variant-price, .menu-section-item-dietary-props {
+    font-family:@font-swatch5-font-family;
+    font-size:@font-swatch5-font-size;
+    font-weight: @font-swatch5-font-weight;
+    line-height:@font-swatch5-line-height;
+    color:@font-swatch5-color;
+    letter-spacing: @font-swatch5-letter-spacing;
+    float: left;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+.menu-item-nutritional-title, .variant-price {
+  font-style: italic;
+}
+
+.menu-item-nutritional-props .menu-item-nutritional-prop p {
+  padding-bottom: 0;
+  font-style: italic;
+}
+
+.standard-price {
+    font-style: italic;
+}
+
+
+.menu-item-promoted {
+    background-color: hsla(hue(@color-swatch1), saturation(@color-swatch1), lightness(lighten(@color-swatch1,10%)), 0.6); 
+        border: none;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+    padding: 1em;
+}
+
+.menu-item-promoted:after {
+    content: "★";
+    font-size: 2em;
+    position: absolute;
+    top: 0.5em;
+    left: 0.45em;
+    color: @color-swatch3;
+}
+
+.menu-item-promoted h3 {
+  padding-left:40px;
+  width: auto;
+}
+
+.menu-item-image {
+    border: none;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  width: 100%;
+}
+
+
+
+.menu-items,
+.menu-item-prices,
+.menu-sections,
+.menu-section-items,
+.menu-section-item-prices {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    float: left;
+}
+
+
+.menu-items ul li {
+  list-style: circle;
+}
+
+
+
+
+.menu-header,
+.menu-section-header {
+    margin-bottom: 1em;
+}
+
+
+
+.menu-item-name,
+.menu-section-item-name {
+    font-family:@font-swatch3-font-family;
+    font-size:@font-swatch3-font-size;
+    font-weight: @font-swatch3-font-weight;
+    line-height:@font-swatch3-line-height;
+    color:@font-swatch3-color;
+    letter-spacing: @font-swatch3-letter-spacing;
+    float: left;
+    width: 100%;
+}
+
+.menu-section-name {
+    font-family:@font-swatch2-font-family;
+    font-size:@font-swatch2-font-size;
+    font-weight: @font-swatch2-font-weight;
+    line-height:@font-swatch2-line-height;
+    color:@font-swatch2-color;
+    letter-spacing: @font-swatch2-letter-spacing;
+}
+
+.menu-item-description,
+.menu-section-item-description {
+    margin-bottom: 1em;
+}
+
+
+.dietary-icon {
+    display: inline-block;
+    height: 1em;
+    width: 1em;
+}
+
+
+.menu-items .menu-item .menu-item-nutritional-props .menu-item-nutritional-prop {
+  list-style: disc;
+  margin-left: 1.4em; 
+  text-indent: -1.4em;
+  padding-left: 1em;
+}
+
+
+
+.menu-section-item-dietary-props {
+    margin-top: 1.5em;
+}
+
+.menu-section-item-dietary-props .dietary-icon {
+    margin-right: 0.5em;
+}
+
+.vegetarian-icon {
+  background-color: #026B1B;
+  width: 25px;
+  height: 25px;
+      border: none;
+  -webkit-border-radius: 100px;
+  -moz-border-radius: 100px;
+  border-radius: 100px;
+  background-image: image('/images/v.png');
+  background-repeat: no-repeat;
+  background-size: 18px;
+  background-position: center;
+}
+
+.glutenFree-icon {
+  background-image: image('/images/gf.png');
+  background-color: @color-swatch5;
+  width: 25px;
+  height: 25px;
+      border: none;
+  -webkit-border-radius: 100px;
+  -moz-border-radius: 100px;
+  border-radius: 100px;
+  background-repeat: no-repeat;
+  background-size: 18px;
+  background-position: center;
+}
+
+dt,
+dd {
+    display: inline-block;
+    font-family:@font-swatch5-font-family;
+    font-size:@font-swatch5-font-size;
+    font-weight: @font-swatch5-font-weight;
+    line-height:@font-swatch5-line-height;
+    color:@font-swatch5-color;
+    letter-spacing: @font-swatch5-letter-spacing;
+}
+
+dd {
+margin: 0 5px -7px;
+}
+
+
+.menu-note {
+float: left;
+width: 100%;
+}
+
+.menu-dietary-key {
+float: left;
+width: 100%;
+}
+
+
+
+footer .wrapper {
+   border-top: 2px solid @color-swatch3;
+}
+
+
+footer .wrapper .widget.image img{
+ margin: -128px auto 0;
+}
+
 
 /* ===============================
    FOOTER
@@ -312,27 +543,10 @@ header {
 
 footer {
   padding: 4em 0;
-  background-color: @color-swatch7;
   min-height: 150px;
-  color: @color-swatch1;
 }
 
-footer h2 {
-  color: @color-swatch1;
-  font-size:bkscale(@font-swatch2-font-size, 0.9);
-  padding-bottom: 20px;
-}
 
-footer p {
-  font-family: @font-swatch5-font-family;
-  color: lighten(@color-swatch5,10%);
-  line-height:@font-swatch5-line-height;
-  padding-bottom: 20px;
-}
-
-footer span {
-  color: @color-swatch1;
-}
 
 /* ===============================
    STANDARD NAVIGATION
@@ -387,142 +601,210 @@ footer span {
    =============================== */
 
 .widget.extendednavigation {
-  float: right;
-  position: relative;
-  max-width: 691px;
+    text-align: center;
+    position: relative;
+    border-top: 2px solid @color-swatch3;
+    border-bottom: 2px solid @color-swatch3;
+}
+
+
+.widget.extendednavigation ul {
+  padding: 0;
+  margin: 0;
 }
 
 .widget.extendednavigation a.pull {
   display: none;
 }
 
-.widget.extendednavigation ul {
-  float: left;
-  margin: 0;
-  padding: 0;
-}
-
-/* ALIGNMENTS */
-
-.widget.extendednavigation ul.align-center li, .widget.extendednavigation ul.align-center li:hover ul li {
+.widget.extendednavigation ul.align-center li
+{
   text-align: center;
 }
 
-.widget.extendednavigation ul.align-left li, .widget.extendednavigation ul.align-left li:hover ul li
+.widget.extendednavigation ul.align-left li
 {
   text-align: left;
 }
 
-.widget.extendednavigation ul.align-right li, .widget.extendednavigation ul.align-right li:hover ul li
+.widget.extendednavigation ul.align-right li
 {
-  background-color: @color-swatch3;
   text-align: right;
 }
 
 .widget.extendednavigation ul li {
-  float: left;
-  display: block;
-  text-align: left!important;
+  display: inline-block;
 }
+
 
 .widget.extendednavigation ul li a, .widget.extendednavigation ul li.folder .text {
   display: block;
-  padding: 18px 25px;
+  padding: 16px 20px;
+  margin: 0;
   font-family:@font-swatch6-font-family;
   font-size:@font-swatch6-font-size;
   font-weight: @font-swatch6-font-weight;
   color: @font-swatch6-color;
   line-height:@font-swatch6-line-height;
   letter-spacing: @font-swatch6-letter-spacing;
+  text-transform: uppercase;
 }
 
-.widget.extendednavigation ul li a:hover {
+.widget.extendednavigation ul li a, .widget.extendednavigation ul li.folder .text:hover {
+  color: @font-swatch6-color;
+}
+
+.widget.extendednavigation ul li.folder .text:hover {
+   color: @font-swatch6-color-hover;
+}
+
+
+.widget.extendednavigation ul li a:hover, .widget.extendednavigation ul li.folder:hover {
   text-decoration: none;
   color: @font-swatch6-color-hover;
 }
 
-/* SELECTED */
-
-.widget.extendednavigation ul li.selected {
-  background-color: @color-swatch3;
-
-}
-
-.widget.extendednavigation ul li.selected:hover { 
-
-}
-
-/* FOLDER */
-
 .widget.extendednavigation ul li.folder {
-  margin-right: 16px;
   background-image: image('/images/arrow-down.png');
   background-position: right center;
   background-repeat: no-repeat;
+  height: 100%;
   cursor: pointer;
 }
 
-.widget.extendednavigation ul li.folder .text:hover {
-  color: @color-swatch1;
-  background-color: @color-swatch3;
-}
-
-/* DROPDOWN MENU */
 
 .widget.extendednavigation li > ul {
   display: none;
 }
 
-.widget.extendednavigation li:hover > ul {
+.widget.extendednavigation ul li:hover > ul {
   display: block;
-  width: 100%;
+  width: 186px;
   position: absolute;
-  left: 0;
-  background-color: @color-swatch7;
-  border-top: 1px solid lighten(@color-swatch7,8%);
+  background-color: @font-swatch6-background-color;
+  background-image: image('/images/worn_dots.png');
   z-index: 500;
-  padding: 20px 0;
+  margin-top: 0;
 }
 
-.widget.extendednavigation li:hover > ul > li {
+.widget.extendednavigation ul li:hover > ul > li {
   display: block;
   width: 100%;
-  text-align: left!important;
-  padding: 0 30px 0;
-  -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
-  -moz-box-sizing: border-box;    /* Firefox, other Gecko */
-  box-sizing: border-box;         /* Opera/IE 8+ */
+  text-align: left;
 }
 
-.widget.extendednavigation li:hover > ul li:first-child {
-}
-
-.widget.extendednavigation li:hover > ul li:hover {
-
-}
-
-.widget.extendednavigation li:hover > ul > li > a {
-  display: block;
-  background-image: none;
-  color: @color-swatch7;
+.widget.extendednavigation ul li:hover > ul li a {
   padding: 0;
 }
 
-
-.widget.extendednavigation ul li:hover > ul li .text {
-  padding: 0 0 0 16px;
-  background-image: image('/images/arrow-left.png');
-  background-position: left center;
-  background-repeat: no-repeat;
+.widget.extendednavigation ul li:hover > ul > li > a .text {
+  margin-left: 0;
+  color: @font-swatch6-color;
 }
 
-.widget.extendednavigation li:hover > ul > li > a {
+.widget.extendednavigation ul li:hover > ul > li > a:hover {
+  color: @font-swatch6-color-hover;
+}
+
+/* EXTENDED NAVIGATION - INSIDE ZONE */
+
+.main .widget.extendednavigation {
+    max-width: 100%;
+    width: 100%;
+    float: none;
+    text-align: left;
+}
+
+.main .widget.extendednavigation:before,
+.main .widget.extendednavigation:after {
+    content: " ";
+    display: table;
+  }
+.main .widget.extendednavigation:after {
+    clear: both;
+}
+.main .widget.extendednavigation {
+    *zoom: 1;
+}
+
+
+/* ===============================
+   WIDGETS ON HEADER
+   =============================== */
+
+
+
+.phone .widget.profile span, .address .widget.profile span {
+  text-align: center;
+  font-family:@font-swatch10-font-family;
+  font-weight: @font-swatch10-font-weight;
+  color:@font-swatch5-color;
+  line-height:@font-swatch10-line-height;
+  letter-spacing: @font-swatch10-letter-spacing;
+  font-size: @font-swatch10-font-size;
+  text-transform: uppercase;
 
 }
 
-.widget.extendednavigation li:hover > ul li .text:hover {
-  color: @color-swatch1;
+.address .widget.profile span {
+
+  text-align: center;
+  font-family:@font-swatch5-font-family;
+  font-weight: @font-swatch5-font-weight;
+  color:@font-swatch5-color;
+  line-height:@font-swatch5-line-height;
+  letter-spacing: @font-swatch5-letter-spacing;
+  font-size: bkscale(@font-swatch5-font-size,1.1);
+  text-transform: none;
 }
+
+header .widget.content p {
+  text-align: center;
+    text-align: center;
+  font-family:@font-swatch5-font-family;
+  font-weight: @font-swatch5-font-weight;
+  color:@font-swatch5-color;
+  line-height:@font-swatch5-line-height;
+  letter-spacing: @font-swatch5-letter-spacing;
+  font-size: bkscale(@font-swatch5-font-size,1.1);
+  text-transform: none;
+}
+
+
+
+/* ===============================
+   BOOKING BUTTON
+   =============================== */
+
+.booking-button .widget.button button {
+
+  margin: 2em 0;
+  padding: 15px;
+  border: none;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  -webkit-box-shadow: 0px 3px 0px darken(@color-swatch3,15%);
+  -moz-box-shadow:    0px 3px 0px darken(@color-swatch3,15%); 
+  box-shadow:         0px 3px 0px darken(@color-swatch3,15%); 
+  font-family: @font-swatch7-font-family;
+  font-size: @font-swatch7-font-size;
+  font-weight:@font-swatch7-font-weight;
+  background-color: @font-swatch7-background-color;
+  color: @font-swatch7-color;
+  text-decoration: none;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  margin-top: 10px;
+
+}
+
+
+#page-zones__template-widgets__button-button-bk-overlay {
+  height: 70px;
+}
+
+
 
 /* ===============================
    FEATURE
@@ -982,8 +1264,8 @@ footer span {
 }
 
 hr.line {
-   background-color: lighten(@color-swatch5,18%);
-   height: 1px;
+   background-color: @color-swatch3;
+   height: 2px;
    width: 100%;
    border: none;
 }
@@ -1633,12 +1915,26 @@ hr.line.align-right {
 
 @media only screen and (max-width: 768px) {
 
+  .main {
+    padding: 10px 0;
+  }
+
+
+  .menu-items, .menu-section-items {
+       -moz-column-count: 2;
+       -moz-column-gap: 50px;
+       -webkit-column-count: 2;
+       -webkit-column-gap : 50px;
+}
+
   /* NAV */
 
   .widget.extendednavigation {
     width: 100%;
     padding: 0;
-    border-top: 1px solid lighten(@color-swatch7,8%);
+    border-top: 2px solid @color-swatch3;
+    border-bottom: 0;
+    height: 50px;
   }
 
   .widget .extendednavigation {
@@ -1653,18 +1949,28 @@ hr.line.align-right {
     display: block;
     width: 100%;
     position: absolute;
-    top: 3px;
+    top: 5px;
+
   }
 
     .widget .extendednavigation a.pull:after {
     content:"";
     background: image('/images/nav-icon.png') no-repeat;
+    background-position: center;
     width: 38px;
     height: 38px;
+    top: 0;
     display: inline-block;
     position: absolute;
     right: 15px;
-    top: -50px;
+    background-color: @color-swatch3;
+    border: none;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 5px;
+    -webkit-box-shadow: 0px 3px 0px darken(@color-swatch3,15%);
+    -moz-box-shadow:    0px 3px 0px darken(@color-swatch3,15%); 
+    box-shadow:         0px 3px 0px darken(@color-swatch3,15%); 
   }
 
   /* NAV */
@@ -1759,6 +2065,26 @@ hr.line.align-right {
    =============================== */
 
 @media only screen and (max-width: 480px) {
+
+    /* MENU */
+
+    .menu-items, .menu-section-items {
+       -moz-column-count: 1;
+       -moz-column-gap: 50px;
+       -webkit-column-count: 1;
+       -webkit-column-gap : 50px;
+}
+
+.menu-item, .menu-section-item {
+margin-bottom: 1.5em;
+padding-bottom: 1.5em;
+}
+
+footer {
+  padding: 6em 0 0;
+}
+
+
 
   /* COMPANY HEADER */
 
