--- a/default.twig
+++ b/default.twig
@@ -49,7 +49,8 @@
         {% if menu.items|length %}
             <ol class="menu-items">
                 {% for item in menu.items %}
-                    <li class="menu-item{% if item.promoted %} menu-item-promoted{% endif %}">
+                <li class="menu-item{% if item.promoted %} menu-item-promoted{% endif %}">
+                    <div class="inner-item">
                         <h3 class="menu-item-name">{{ item.name }}</h3>
 
                        {% if item.imageURL is not null %}
@@ -92,7 +93,8 @@
                                 {% endfor %}
                             </div>
                         {% endif %}
-                    </li>
+                    </div><!--end inner-item-->
+                </li>
                 {% endfor %}
             </ol>
         {% endif %}
@@ -115,6 +117,7 @@
                             <ol class="menu-section-items">
                                 {% for item in section.items %}
                                     <li class="menu-section-item{% if item.promoted %} menu-item-promoted{% endif %}">
+                                        <div class="inner-item">
                                         <h3 class="menu-section-item-name">{{ item.name }}</h3>
                                         {% if item.prices|length %}
                                             <ol class="menu-section-item-prices">
@@ -156,6 +159,7 @@
                                                 {% endfor %}
                                             </div>
                                         {% endif %}
+                                    </div><!--end inner-item-->
                                     </li>
                                 {% endfor %}
                             </ol>
