extra space at the bottom of columns removed

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -328,8 +328,12 @@ header {
     margin-bottom: 2.5em;
     padding-bottom: 2.5em;
     position: relative;
-    display: inline-block;
+    display: block;
     border-bottom: 1px dotted @color-swatch5;
+}
+
+.inner-item {
+    display: inline-block;
 }
 
 
